# BitForge

./: BitForge.slnx  README.md
BitForge/: BitForge.vcxproj  BitForge.vcxproj.filters  Main.cpp  imgui.ini
BitForge/Assets/Cache/: AssetCache.h
BitForge/Assets/Core/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetTypes.h
BitForge/Assets/Loaders/: GLTFLoader.cpp  GLTFLoader.h  GltfModelLoader.cpp  GltfModelLoader.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
BitForge/Assets/Streaming/: AssetStreamer.cpp  AssetStreamer.h
BitForge/Camera/: CameraController.cpp  CameraEffects.cpp  CameraExposure.cpp  CameraMath.cpp  CinematicCamera.h
BitForge/Config/Presets/: PresetBinding.cpp  PresetBinding.ixx  PresetManager.cpp  PresetManager.ixx  PresetSerializer.cpp  PresetSerializer.ixx  PresetSession.cpp  PresetSession.ixx  PresetTypes.ixx
BitForge/Core/: MathSimd.h  Timer.cpp  Timer.h  Vertex.h
BitForge/Input/: Input.cpp  Input.h
BitForge/Renderer/: Dx12Renderer.cpp  Dx12Renderer.h  Dx12RendererDeferred.cpp  Dx12RendererInit.cpp  Dx12RendererInternal.h  Dx12RendererPipeline.cpp  Dx12RendererResources.cpp
BitForge/Rendering/Deferred/: GBuffer.h  GBufferCreate.cpp  (+1 more)
BitForge/Scene/: Camera.cpp  Camera.h  SceneLightingSetup.cpp  TimeOfDay.cpp  TimeOfDay.h
BitForge/UI/: ImGuiLayer.cpp  ImGuiLayer.h
BitForge/presets/: default.json
CMake/: CMakeLists.txt
WorkDirectory/: ASMColor.asm  ASMWindow.asm  ASMWindowHelper.asm  RenderWindow.asm  VsCmdLine.lnk  bf.Window.ifc  windows.inc
lib/: Window.ixx.ifc  bf-Window.lib
(+55 files in other folders)
